<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <ProgressBar
        android:id="@+id/progressBarAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile_picture" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        android:id="@+id/changeAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:id="@+id/profile_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="8">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" >
            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:hint="Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_details"
                android:textSize="24sp"
                android:text="@string/profile_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:backgroundTint="@color/white"
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_exit_to_app_24" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_options_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTextViewLayout"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" >
            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:hint="Username"
                android:visibility="visible"
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameEditTextViewLayout"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" >
            <com.google.android.material.textfield.TextInputEditText
                android:hint="Username"
                android:maxLength="16"
                android:visibility="gone"
                android:id="@+id/userNameEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:visibility="visible"
            android:id="@+id/editUserNameBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/saveUserNameBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_box_24" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/choose_category_text"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_categories_text"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/choose_category_text">

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music_concerts" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports_events" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/art_and_exhibitions" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_and_theater" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/educational_events" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social_events" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/culinary_events" />

                <CheckBox
                    android:background="@color/checkbox_selector"
                    android:id="@+id/check_box8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology_and_innovation" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>